--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" type="image/x-icon" href="https://emojipedia-us.s3.amazonaws.com/thumbs/160/facebook/105/closed-book_1f4d5.png" />
     <title></title>
   </head>
   <body>
